--- a/app/src/main/res/layout/news_detail_page.xml
+++ b/app/src/main/res/layout/news_detail_page.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -13,14 +13,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
         <ImageButton
-            android:id="@+id/btn_next"
+            android:id="@+id/bt_next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:background="@null"
+            android:onClick="nextPage"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:background="@null"
-            android:src="@drawable/news_cate_arr" />
+            android:src="@drawable/news_cate_arr"/>
     </LinearLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_news"
