--- a/app/src/main/res/layout/pager_tab_detail.xml
+++ b/app/src/main/res/layout/pager_tab_detail.xml
@@ -2,13 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="#000"
               android:orientation="vertical">
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_pic"
+        android:layout_width="match_parent"
+        android:layout_height="180dp">
+    </android.support.v4.view.ViewPager>
     <ListView
         android:id="@+id/lv_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:divider="@null"/>
+        android:layout_height="match_parent"
+        android:cacheColorHint="#fff"/>
 
 </LinearLayout>
