完成新闻的下拉刷新以及加载更多功能

--- a/app/src/main/res/layout/pager_tab_detail.xml
+++ b/app/src/main/res/layout/pager_tab_detail.xml
@@ -4,7 +4,7 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <ListView
+    <com.app.smartbj.view.PullToRefreshListView
         android:id="@+id/lv_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
